# WebRTC-Study

./: .gitignore  README.md  源码结构.md
doc/: WebRTC-resource.md
testWebRTC/: CMakeLists.txt  README.MD  testTaskQueue.cpp
testWebRTC/3rd/webRTC/include/PaxHeaders.X/: modules_audio_processing_test_py_quality_assessment_quality_assessment_echo_path_sim
testWebRTC/3rd/webRTC/include/api/task_queue/: task_queue_base.cc
testWebRTC/3rd/webRTC/include/modules/desktop_capture/: window_capturer_win.cc
testWebRTC/3rd/webRTC/include/rtc_base/: win32.cc
web/demoStudy/: README.MD
web/demoStudy/enumerate_device/: enumerate_device.html  enumerate_device.js
web/demoStudy/get_display_media/: get_display_media.html  get_display_media.js
web/demoStudy/get_user_media/: get_user_media.html  get_user_media.js
web/demoStudy/media_negotiate/: media_negotiate.html  media_negotiate.js
web/demoStudy/media_stream/: media_stream.html  media_stream.js
